# volt

./: .gitmodules
client/: 1.txt  CMakeLists.txt
client/configs/: server_list.json
client/console/: CMakeLists.txt  main.cpp
client/console/src/: main.cpp  stdafx.h
client/core/: CMakeLists.txt
client/core/configs/: servers.h
client/core/include/structs/: server_info.h
client/core/pch/: stdafx.h
client/core/resources/configs/: servers.json
client/core/src/: main.cpp  stdafx.h
client/core/src/json/: server_info_reader.cpp  server_info_reader.h
client/core/src/structs/: server_info.cpp
client/core/tests/: CMakeLists.txt  main.cpp  test_configs_servers.cpp
client/core/tests/json/: server_info_reader_test.cpp
client/core/tests/pch/: stdafx.h
client/core/tests/src/: main.cpp  test_configs_servers.cpp
server/: CMakeLists.txt
server/config/: private.key  public.key
server/src/: main.cpp
shared/crypto/: dsa.cpp  dsa.h
utils/: CMakeLists.txt  locale.cpp  locale.h
utils/localization/: locale.cpp  locale.h
utils/memory/: buffer.cpp  buffer.h  view.h
utils/network/: transport_packet.cpp  transport_packet.h
utils/pch/: stdafx.h
utils/tests/: CMakeLists.txt  main.cpp
utils/tests/memory/: test_buffer.cpp
utils/tests/network/: test_transport_packet.cpp
utils/tests/pch/: stdafx.h
